Support JDK17 for CI enviroment #13868 (#613)
* Support JDK17 for CI enviroment #13868

* updated maven profile for jdk17

* Fix CI: Update Checkstyle Plugin to v3.6.0 and Ensure Compatibility

* fix CI

* Added chekstle header file

* Muted header file for checktyle

* Disable Jacoco coverage reporting in CI workflows

* jacoco vesion change

* Fix indentation issue in GitHub Actions workflow

* Fix Codecov upload issue

* fix(ci): Improve GitHub Actions workflow for CI and Codecov

* revert build-and-test-pr changes

---------

Co-authored-by: xiaosheng <songxiaosheng@apache.org>